# ASTra

./: .aiignore  .coveragerc  .dockerignore  .env.example  .gitignore  ASTRA_CONTEXT.md  Dockerfile  INITIAL_TEST_RUN.txt  README.md  REFACTORED_TEST_RUN.txt  bundle_astra.py  check_aider_repo.py  config.example.json  config.json  docker-compose.yml  generate_map.py  implementation_plan_1.md  implementation_plan_t1.md  inspect_aider.py  out.txt  project_map_raw.txt  pyproject.toml  tools_verify_final.txt  tools_verify_final_2.txt  verify_context.py
.github/workflows/: ci.yml
astra/: __init__.py  config.py  main.py  setup_wizard.py
astra/adapters/: chromadb_store.py  llm_client.py  mixins.py  vcs_git.py
astra/core/: architecture.py  clock.py  commands.py  compression.py  context.py  monitor.py  orchestrator.py  remote_provider.py  safeguard.py  task_queue.py  template_manager.py  tools.py
astra/handlers/: command_handlers.py  project_handlers.py  system_handlers.py  task_handlers.py
astra/ingestion/: __init__.py  dependency_resolver.py  ingestion_cache.py  knowledge_graph.py  parser.py  pipeline.py  size_estimator.py
astra/interfaces/: __init__.py  gateway.py  llm.py  vcs.py  vector_store.py
astra/memory/: __init__.py  store.py
astra/templates/: architecture.md  critic_review.md  fastapi_rules.md  planning_feature.md  pr_template.md  python_conventions.md  react_rules.md  system.md  system_prompt.md  typescript_conventions.md
astra/tools/: __init__.py  aider_tool.py  custom_loader.py  file_ops.py  git_ops.py  knowledge.py  lint.py  manifest.py  pr_review.py  search.py  shell.py
data/: ingestion_cache.json  knowledge_graph.graphml
docs/: README.md  configuration.md  project_audit_overview.md  security.md
docs/features/: custom-tools.md  knowledge-graph.md  pr-review.md  rag-first.md  vector-search.md
dummy/: architecture.md  critic_review.md  planning_feature.md  pr_description.md
scripts/: clear_chroma.py  debug_chroma.py  generate_current_arch.py  generate_graph.py  query_chroma.py  test_raw.py  verify_ingestion_robustness.py  verify_optimization.py
tests/: conftest.py  conftest.py.bak  investigate_context.py  manual_verify_arch.py  reproduce_issue.py  test_main.py  test_setup_wizard.py  test_setup_wizard_comprehensive.py  verify_context_and_isolation.py
tests/adapters/: test_adapters_comprehensive.py  test_chromadb_optimization.py  test_chromadb_store.py  test_discord_auth.py  test_discord_commands.py  test_discord_gateway.py  test_discord_mfa.py  test_vcs_git.py
(+137 files in other folders)
