[project]
name = "astra"
version = "0.1.0"
description = "Autonomous AI Coding Agent (AICA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "ollama>=0.1.6",
    "chromadb>=0.4.22",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "litellm>=1.30.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "networkx>=3.2.0",
    "aider-chat>=0.50.0",
    "ddgs>=1.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",
    "typer>=0.21.1",
    "python-json-logger>=4.0.0",
    "rich>=14.1.0",
    "apscheduler>=3.11.2",
    "sqlalchemy>=2.0.46",
    "playwright>=1.40.0",
    "pyotp>=2.9.0",
    "llmlingua>=0.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=2.0.0",
    "cron-descriptor>=1.4.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]

[project.scripts]
astra = "astra.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=./astra --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["astra"]
omit = ["tests/*", "setup.py", ".venv/*", "*__init__*"]
markers = [
    "e2e: end-to-end integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in default arguments (used for dependency injection)
]

[tool.ruff.lint.isort]
known-first-party = ["astra"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
